fixed spacing on section 2 boxes and centered subtext below the boxes.

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ button {
     flex-basis: 150px;
     flex-direction: column;
     justify-content: center;
+    padding-left: 50px;
 }
 
 .img1 > div,
@@ -147,6 +148,7 @@ button {
     border-radius: 4px;
     height: 150px;
     width: 150px;
+    margin: 20px;
 }
 
 .img1 > p,
@@ -156,7 +158,9 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
+    text-align: center;
+    width: 150px;
+    margin: 20px;
 }
 
 .section-three {
